--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 transformers>=4.40.0
 torch>=2.0.0
-scikit-learn>=1.4.0
-pandas>=2.2.0
-numpy>=1.24.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
 optuna>=3.6.0
 evaluate>=0.4.0
 wandb>=0.16.0
 tqdm>=4.66.0
+emoji==2.14.1
+ipython==8.12.3
+matplotlib==3.9.2
+nltk==3.9.1
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.1
+scipy==1.13.1
+seaborn==0.13.2
+spacy==3.8.4
+torch==2.7.1
+transformers==4.53.0
